istio_service/ui_virtual_service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ui
spec:
  hosts:
  - "*"
  gateways:
  - gateway
  http:
    - route:
      - destination:
          port:
            number: 80
          host: ui.default.svc.cluster.local
